k8s/manifests-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: signing-authority-test
  name: signing-authority-test
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: signing-authority-test
