k8s/manifests-test/ingress.yaml
#The commented out sections below are for when the application is set up for SSL
#They should be uncommented out when application is SSL enabled
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: signing-authority-test-ingressroute
  namespace: signing-authority-test
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      #match requests to this domain
      match: Host(`signing-authority-test.ynet.gov.yk.ca`)
      priority: 10
      services:
        - name: signing-authority-test
          port: 3000
  tls:
    domains:
      - main: signing-authority.ynet.gov.yk.ca
        sans:
          - signing-authority-test.ynet.gov.yk.ca
    secretName: signing-authority-cert

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https-redirect
  namespace: signing-authority-test
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`signing-authority-test.ynet.gov.yk.ca`)
      priority: 1
      middlewares:
        - name: redirect-to-https
      services:
        - name: signing-authority-test
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: signing-authority-test
spec:
  redirectScheme:
    scheme: https
    permanent: true
